src/style/main.less
@import '_generic.reset.less';

@black: #444;

:root {
  --content-margin: 5rem;
  --content-width: 600px;

  --content-spacing: 0.7rem;
  --section-spacing: 1.5rem;

  @media screen and (max-width: 600px) {
    --content-margin: 8vmin;
  }
}

html, body {
  font-size: 18px;
  line-height: 1.4;

  font-family: "PT Serif", serif;

  color: @black;
}

body {
  margin: var(--content-margin);
}

main {
  max-width: var(--content-width);
  margin: auto;
  margin-bottom: 50vh;
}

aside {

  max-width: 25%;

  font-size: 0.9rem;

  border-left: 2px solid #888;

  margin-top: 0.25rem;
  margin-bottom: 0.25rem;
  margin-left: 0.5rem;

  padding-left: 0.5rem;
  padding-top: 0.25rem;
  padding-bottom: 0.5rem;

  float: right;

  @media screen and (max-width: 600px) {

    max-width: unset;

    border: none;
    padding: 0;
    margin: 0;

    margin-bottom: 0.25rem;

    font-style: italic;

    &::before {
      content: "\21A1";
      margin-right: 0.5rem;

      font-style: normal;
    }

    & + * {
      clear: both;
    }
  }
}

@header-font-size: 15vw;
@header-max-font-size: 8rem;

header {
  display: flex;
  height: calc(100vh - 2 * var(--content-margin));
  align-items: flex-end;
  line-height: 1;
  border-bottom: 0.2rem solid @black;
  margin-bottom: 5rem;
}

h1 {
  font-size: 8rem;
}

@media screen and (max-width: 600px) {
  header {
    border-bottom-width: 0.1vw;
  }

  h1 {
    font-size: 15vw;
  }
}


h2 {
  font-size: 2rem;
  font-weight: 700;

  margin-top: var(--content-margin);
  margin-bottom: var(--content-spacing);
}

h3 {
  font-size: 1.2rem;
  font-weight: 700;

  margin-top: var(--section-spacing);
  margin-bottom: var(--content-spacing);
}

p {
  margin-bottom: var(--content-spacing);
}

strong {
  font-weight: bold;
}

em {
  font-style: italic;
}

ul {
  margin-left: 2rem;
  li {
    list-style: disc;
  }
}

blockquote.to-read {
  padding-left: 1rem;
  padding-right: 1rem;
  font-style: italic;

  margin-bottom: 1rem;
}

.check {
  background-color: #eeeeee;
  border: 1px solid #dddddd;
  border-radius: 0.3em;
  padding-left: 0.1em;
  padding-right: 0.1em;
}

@media print {

  @page-margin: 5cm;

  @page {
    size: A4 portrait;

    margin: @page-margin;
  }

  @page :first {
    margin: 3cm;
  }

  html, body {
    font-size: 11pt;
  }

  body {
    margin: 0;

    display: block;

  }

  header {
    height: calc(100vh - 1rem);
  }

  aside {
    max-width: 3.5cm;
  }
}

